--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                            </a>
                         </li>
                         <li>
-                           <a href="https://github.com/johanliebert5591/" target="_blank" rel="noopener">
+                           <a href="https://github.com/syeda-tamzida/" target="_blank" rel="noopener">
                            <i class="fab fa-github big-icon"></i>
                            </a>
                         </li>
