--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                   <div style="margin-bottom:20px;">
                      <strong style="display:block;font-size:18px;margin-bottom:8px;color:#0b3d91;">Current Academic Background</strong>
                      <p style="margin:0;font-size:15px;color:#222;">
-                        I am a second-year undergraduate student in Civil Engineering at Chittagong University of Engineering and Technology (CUET), Bangladesh, focusing on the application of artificial intelligence in transportation systems and infrastructure management. I am involved in projects related to intelligent transportation systems, predictive maintenance, and sustainable urban mobility.
+                        I am a graduate in Civil Engineering from Chittagong University of Engineering and Technology (CUET), Bangladesh, with a focus on the application of artificial intelligence in transportation systems and infrastructure management. I have worked on projects related to intelligent transportation systems, predictive maintenance, and sustainable urban mobility.
                      </p>
                   </div>
 
