--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@
                   </p>
                </div>
 
+               <!--Edited here-->
                <div  style="max-width:800px;margin:24px auto;padding:28px 28px 8px 28px;border-radius:12px;background:#ffffff;box-shadow:0 6px 20px rgba(0,0,0,0.06);font-family:Inter, Roboto, -apple-system, 'Segoe UI', Arial, sans-serif;color:#111;line-height:1.6;">
                   
                   <p style="margin: 0 0 6px 0; font-weight: bold; font-size: 1.1rem;">
