--- a/index.html
+++ b/index.html
@@ -398,13 +398,13 @@
                   </p>
                   <p style="margin: 0 0 6px 0; font-style: italic;">
                      <strong>Authors:</strong> Mahbub Hassan, Md Emtiaz Kabir, 
-                     <span style="color: #007bff; ">Syeda Tamzida Akter</span>,<br>Urmila Bhanja, Monalisa Nayak
+                     <span style="color: #007bff; ">Syeda Tamzida Akter</span>, Urmila Bhanja, Monalisa Nayak
                   </p>
                   <p style="margin: 0 0 6px 0;">
                      <strong>Keywords:</strong> Artificial Intelligence, Large Language Models, Real-Time Traffic Data, Semantic Search, Intelligent Transportation Systems.
                   </p>
                   <p style="margin: 0 0 6px 0; font-weight: 600;">
-                     16th ICCCNT2025: 16th International IEEE Conference on Computing Communication and Networking Technologies
+                     THE 16th INTERNATIONAL IEEE CONFERENCE ON COMPUTING, COMMUNICATION AND NETWORKING TECHNOLOGIES (16th ICCCNT)
                   </p>
                   <p>
                      <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://drive.google.com/file/d/1My9S721dx7bbATHRptXChUBA13lI0454/view?usp=sharing" target="_blank" rel="noopener">
@@ -424,13 +424,13 @@
                      Online Delivery Adoption in the U.S. During COVID-19:<br>A Machine Learning Approach Using NHTS 2022
                   </p>
                   <p style="margin: 0 0 6px 0; font-style: italic;">
-                     <strong>Authors:</strong> Arpita Paul, Abdullah Al Nafees, Mahbub Hassan,<br><span style="color: #007bff; ">Syeda Tamzida Akter</span>, Urmila Bhanja, Monalisa Nayak
+                     <strong>Authors:</strong> Arpita Paul, Abdullah Al Nafees, Mahbub Hassan, <span style="color: #007bff; ">Syeda Tamzida Akter</span>, Urmila Bhanja, Monalisa Nayak
                   </p>
                   <p style="margin: 0 0 6px 0;">
                      <strong>Keywords:</strong> COVID-19, NHTS 2022, consumer behavior, home delivery, machine learning.
                   </p>
                   <p style="margin: 0 0 6px 0; font-weight: 600;">
-                     16th ICCCNT2025: 16th International IEEE Conference on Computing Communication and Networking Technologies
+                     THE 16th INTERNATIONAL IEEE CONFERENCE ON COMPUTING, COMMUNICATION AND NETWORKING TECHNOLOGIES (16th ICCCNT)
                   </p>
                   <p>
                      <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://drive.google.com/file/d/124tK7A1-HXYSaldVrYeUCt-LpSXwXU66/view?usp=sharing" target="_blank" rel="noopener">
@@ -450,13 +450,13 @@
                      Analyzing Public Transit Service Patterns Using GTFS Data: A Machine Learning Approach
                   </p>
                   <p style="margin: 0 0 6px 0; font-style: italic;">
-                     <strong>Authors:</strong> Mahbub Hassan, Md. Emtiaz Kabir, <span style="color: #007bff; ">Syeda Tamzida Akter</span>,<br>Urmila Bhanja, Monalisa Nayak, Debapriya Parida
+                     <strong>Authors:</strong> Mahbub Hassan, Md. Emtiaz Kabir, <span style="color: #007bff; ">Syeda Tamzida Akter</span>, Urmila Bhanja, Monalisa Nayak, Debapriya Parida
                   </p>
                   <p style="margin: 0 0 6px 0;">
                      <strong>Keywords:</strong> GTFS, Public transit, unsupervised learning, machine learning, sustainable transportation.
                   </p>
                   <p style="margin: 0 0 6px 0; font-weight: 600;">
-                     16th ICCCNT2025: 16th International IEEE Conference on Computing Communication and Networking Technologies
+                     THE 16th INTERNATIONAL IEEE CONFERENCE ON COMPUTING, COMMUNICATION AND NETWORKING TECHNOLOGIES (16th ICCCNT)
                   </p>
                   <p>
                      <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://drive.google.com/file/d/1RGWHqZyRz1l7jMoqCjkAEX2aU5KS8JOZ/view?usp=sharing" target="_blank" rel="noopener">
@@ -481,7 +481,7 @@
                      <strong>Keywords:</strong> Vehicle emission, SIDRA, Roundabout, Urban Mobility.
                   </p>
                   <p style="margin: 0 0 6px 0; font-weight: 600;">
-                     16th ICCCNT2025: 16th International IEEE Conference on Computing Communication and Networking Technologies
+                     THE 16th INTERNATIONAL IEEE CONFERENCE ON COMPUTING, COMMUNICATION AND NETWORKING TECHNOLOGIES (16th ICCCNT)
                   </p>
                   <p>
                      <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://drive.google.com/file/d/1x_Vpnyyri3SbfkmY1_5H-caQm2Z-0539/view?usp=sharing" target="_blank" rel="noopener">
@@ -500,7 +500,7 @@
                      Evaluation of Concrete Strength by Using Fly Ash and Brick Kiln Ash as a Partial Replacement for Cement
                   </p>
                   <p style="margin: 0 0 6px 0; font-style: italic;">
-                     <strong>Authors:</strong> <span style="color: #007bff; ">Syeda Tamzida Akter</span>, Debashish Biswas, Aprita Debnath and<br>Md. Basir Zisan
+                     <strong>Authors:</strong> <span style="color: #007bff; ">Syeda Tamzida Akter</span>, Debashish Biswas, Aprita Debnath, Md. Basir Zisan
                   </p>
                   <p style="margin: 0 0 6px 0;">
                      <strong>Keywords:</strong> Brick Klin Ash, Fly Ash, Finite Element Analysis, Sustainable Material, ANSYS, Compressive Strength.
