--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                      <a class="nav-link " href="#contact" data-target="#contact"><span>Contact</span></a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link " href="files/CV_Tamzida.pdf" target="_blank" rel="noopener"><span>CV</span></a>
+                     <a class="nav-link " href="files/CV_Syeda Tamzida Akter Zidni__transport" target="_blank" rel="noopener"><span>CV</span></a>
                   </li>
                </ul>
             </div>
@@ -789,5 +789,6 @@
    </body>
 
 </html>
+
 
 
