Update fmt.Println message to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -657,11 +657,10 @@
                   </p>
 
                   <div style="max-width: 900px; margin: 20px auto; padding: 0 10px;">
-                  <iframe
-                     src="https://lemonslayer-concrete-corrosion-prediction.hf.space"
-                     frameborder="0"
-                     style="width: 100%; height: 450px; border-radius: 8px; border: none; box-shadow: 0 4px 12px rgba(0,0,0,0.1);"
-                  ></iframe>
+                  <video controls width="800">
+                     <source src="screen-recording-2025-10-29-04-47-05.mp4" type="video/mp4">
+                     Your browser does not support the video tag.
+                     </video>
                   </div>
 
                   <p>
@@ -814,6 +813,7 @@
    </body>
 
 </html>
+
 
 
 
