--- a/index.html
+++ b/index.html
@@ -664,7 +664,12 @@
                   </div>
 
                   <p>
-                     <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://huggingface.co/spaces/lemonslayer/Concrete_Corrosion_Prediction" target="_blank" rel="noopener">
+                     <img
+                         src="path/to/Capture.PNG"
+                        alt=""
+                        width="20" height="20"
+                        style="vertical-align: middle; margin-right: 6px; border-radius: 3px;"
+                        loading="lazy" >
                      Source
                      </a>
                      <!-- <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1145/3394486.3403097" target="_blank" rel="noopener">
@@ -813,6 +818,7 @@
    </body>
 
 </html>
+
 
 
 
