--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                      <a class="nav-link " href="#contact" data-target="#contact"><span>Contact</span></a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link " href="files/CV_Syeda Tamzida Akter Zidni__transport" target="_blank" rel="noopener"><span>CV</span></a>
+                     <a class="nav-link " href="CV_Syeda Tamzida Akter Zidni__transport.pdf" target="_blank" rel="noopener"><span>CV</span></a>
                   </li>
                </ul>
             </div>
@@ -142,7 +142,7 @@
                            </a>
                         </li>
                         <li>
-                           <a href="files/CV_Syeda Tamzida Akter Zidni__transport.pdf">
+                           <a href="CV_Syeda Tamzida Akter Zidni__transport.pdf">
                            <i class="ai ai-cv big-icon"></i>
                            </a>
                         </li>
@@ -790,6 +790,7 @@
    </body>
 
 </html>
+
 
 
 
