Update fmt.Println message from 'Hello World'

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                            </a>
                         </li>
                         <li>
-                           <a href="CV_Syeda.pdf">
+                           <a href="files/CV_Syeda.pdf">
                            <i class="ai ai-cv big-icon"></i>
                            </a>
                         </li>
@@ -790,6 +790,7 @@
    </body>
 
 </html>
+
 
 
 
