--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </li>
                         <li>
                            <a href="CV_Syeda.pdf" target="_blank" rel="noopener">
-                           <i class="ai ai-cv big-icon"></i>
+                           <i class="fab fa-CV big-icon"></i>
                            </a>
                         </li>
                      </ul>
@@ -790,6 +790,7 @@
    </body>
 
 </html>
+
 
 
 
