--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                      <a class="nav-link " href="#contact" data-target="#contact"><span>Contact</span></a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link " href="CV_Syeda Tamzida Akter Zidni__transport.pdf" target="_blank" rel="noopener"><span>CV</span></a>
+                     <a class="nav-link " href="https://drive.google.com/file/d/1a8xbJgRxZ0TmMzDFAx_8IVPLSjD25Ddc/view" target="_blank" rel="noopener"><span>CV</span></a>
                   </li>
                </ul>
             </div>
@@ -790,6 +790,7 @@
    </body>
 
 </html>
+
 
 
 
