--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </li>
                         <li>
                            <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://drive.google.com/file/d/1a8xbJgRxZ0TmMzDFAx_8IVPLSjD25Ddc/view" target="_blank" rel="noopener">
-                           <i class="fab fa-CV big-icon"></i>
+                           <i class="ai ai-cv big-icon"></i>
                            </a>
                         </li>
                      </ul>
@@ -790,6 +790,7 @@
    </body>
 
 </html>
+
 
 
 
