--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                            </a>
                         </li>
                         <li>
-                           <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://drive.google.com/file/d/1a8xbJgRxZ0TmMzDFAx_8IVPLSjD25Ddc/view" target="_blank" rel="noopener">
+                           <a href="https://drive.google.com/file/d/1a8xbJgRxZ0TmMzDFAx_8IVPLSjD25Ddc/view" target="_blank" rel="noopener">
                            <i class="ai ai-cv big-icon"></i>
                            </a>
                         </li>
@@ -790,6 +790,7 @@
    </body>
 
 </html>
+
 
 
 
